Crash in [@ gfxDWriteFontList::AppendFamiliesFromCollection]
Categories
(Core :: Graphics: Text, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | disabled |
| firefox80 | --- | fixed |
People
(Reporter: gsvelto, Assigned: jfkthame)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-f5a000e2-019b-4ff5-a18a-aeb780200627.
Top 10 frames of crashing thread:
0 xul.dll gfxDWriteFontList::AppendFamiliesFromCollection gfx/thebes/gfxDWriteFontList.cpp:1034
1 xul.dll gfxDWriteFontList::InitSharedFontListForPlatform gfx/thebes/gfxDWriteFontList.cpp:1325
2 xul.dll gfxPlatformFontList::InitFontList gfx/thebes/gfxPlatformFontList.cpp:483
3 xul.dll gfxWindowsPlatform::CreatePlatformFontList gfx/thebes/gfxWindowsPlatform.cpp:558
4 xul.dll static gfxPlatform::Init gfx/thebes/gfxPlatform.cpp:990
5 xul.dll static gfxPlatform::GetPlatform gfx/thebes/gfxPlatform.cpp:509
6 xul.dll static nsUXThemeData::UpdateTitlebarInfo widget/windows/nsUXThemeData.cpp:171
7 xul.dll nsWindow::Create widget/windows/nsWindow.cpp:1003
8 xul.dll nsIWidget::Create widget/nsIWidget.h:461
9 xul.dll mozilla::AppWindow::Initialize xpfe/appshell/AppWindow.cpp:221
This seems to have started with buildid 20200626094540. There's only four nightly crashes on file but they come from two different users and the stack are consistent. It might be worth noting that both of them are on Windows 7; one using a 32-bit build and the other a 64-bit one.
| Assignee | ||
Comment 1•5 years ago
|
||
Looks like GetSystemFontCollection must have failed for these users; we need to check for that and bail out of the initialization here.
| Assignee | ||
Comment 2•5 years ago
|
||
Jeff, did anything come of the attempt to get insight into cases where DirectWrite initialization fails (eg bug 1619978, bug 1638331)? It looks like the crashes here must be examples where GetSystemFontCollection returned null for some reason.
(I'll add error-handling in gfxDWriteFontList::InitSharedFontListForPlatform to avoid this crash, but that presumably will mean these users fall back to the GDI font backend again, which isn't great.)
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #2)
Jeff, did anything come of the attempt to get insight into cases where DirectWrite initialization fails (eg bug 1619978, bug 1638331)? It looks like the crashes here must be examples where GetSystemFontCollection returned null for some reason.
Nope, it doesn't look like we've had any of the injected crashes yet.
Comment 6•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•