Bug 1649073 - Bail out of InitSharedFontListForPlatform if we fail to get the dwrite system font collection. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D81494